Finished translation of pythonengine and sqliteengine

--- a/docs/source/locale/fr/LC_MESSAGES/benchmarks.po
+++ b/docs/source/locale/fr/LC_MESSAGES/benchmarks.po
@@ -13,7 +13,7 @@ msgstr ""
 
 #: ../../source/benchmarks.rst:2
 msgid "Benchmarks"
-msgstr ""
+msgstr "Comparaisons"
 
 #: ../../source/benchmarks.rst:4
 msgid ""
