--- a/docs/source/locale/fr/LC_MESSAGES/pythonengine.po
+++ b/docs/source/locale/fr/LC_MESSAGES/pythonengine.po
@@ -72,6 +72,14 @@ msgstr ""
 msgid "user-defined classes"
 msgstr ""
 
+#: ../../source/pythonengine.rst:40
+msgid ""
+":func:`db.exists() <pydblite.pydblite._Base.exists>` indicates if the base "
+"exists."
+msgstr ""
+":func:`db.exists() <pydblite.pydblite._Base.exists>` indique si la base existe "
+"exists."
+
 #: ../../source/pythonengine.rst:42
 msgid "if the base exists, open it"
 msgstr "si la base existe déjà, pour l'ouvrir"
@@ -120,25 +128,25 @@ msgstr ""
 
 #: ../../source/pythonengine.rst:62
 msgid "by keywords"
-msgstr ""
+msgstr "par mots-clés"
 
 #: ../../source/pythonengine.rst:68
 msgid "If some fields are missing, they are initialized with the value None"
-msgstr ""
+msgstr "Si certains champs manquent, ils sont initialisés à la valeur None"
 
 #: ../../source/pythonengine.rst:71
 msgid "by positional arguments"
-msgstr ""
+msgstr "par arguments positionnels"
 
 #: ../../source/pythonengine.rst:77
 msgid ""
 "The arguments must be provided in the same order as in the "
 ":python:`create()` method"
-msgstr ""
+msgstr "Les arguments doivent être fournis dans le même ordre que dans la méthode :python:`create()`"
 
 #: ../../source/pythonengine.rst:80
 msgid "save the changes on disk"
-msgstr ""
+msgstr "pour sauvegarder les changements sur le disque"
 
 #: ../../source/pythonengine.rst:86
 msgid ""
@@ -147,24 +155,28 @@ msgid ""
 "use :python:`open()` to restore the values as they are currently on disk "
 "(this is equivalent to rollback in transactional databases)"
 msgstr ""
+"Si vous ne confirmez pas les changements, les opérations d'insertion, "
+"de suppression et de mise à jour ne seront pas sauvegardés sur le disque"
 
 #: ../../source/pythonengine.rst:89
 msgid "delete a record"
-msgstr ""
+msgstr "pour supprimer un enregistrement"
 
 #: ../../source/pythonengine.rst:95
 msgid "or, if you know the record identifier"
-msgstr ""
+msgstr "ou, si vous connaissez l'identifiant"
 
 #: ../../source/pythonengine.rst:102
 msgid "to delete a list of records"
-msgstr ""
+msgstr "pour supprimer une liste d'enregistrements"
 
 #: ../../source/pythonengine.rst:108
 msgid ""
 "where list_of_records can be any iterable (list, tuple, set, etc) yielding "
 "records"
 msgstr ""
+"liste_d_enregistrements peut être n'importe quel itérable (liste, tuple, set, etc) "
+"qui produit des enregistrements"
 
 #: ../../source/pythonengine.rst:111
 msgid "to update a record"
@@ -177,6 +189,9 @@ msgid ""
 " to be unique and unchanged for each record in the base, so that it can be "
 "used as the record identifier"
 msgstr ""
+"En plus des champs passés à la méthode :python:`create()`, un champ interne "
+"appelé __id__ est ajouté. C'est un entier, unique et inchangé pour chaque "
+"enregistrement, il peut donc être utilisé comme identifiant pour l'enregistrement"
 
 #: ../../source/pythonengine.rst:119
 msgid ""
@@ -186,63 +201,74 @@ msgid ""
 " to detect concurrency control, for instance in a web application where 2 "
 "users select the same record and want to update it at the same time"
 msgstr ""
+"un autre champ interne appelé :python:`__version__` est également géré par le "
+"moteur de base de données. Il s'agit d'un entier qui est initialisé à 0 quand "
+"l'enregistrement est créé, et incrémenté de 1 à chaque fois que l'enregistrement "
+"est mis à jour. Ceci sert pour la détection des accès concurrents, par exemple "
+"dans une application web dans laquelle deux utilisateurs veulent mettre à jour "
+"le même enregistrement en même temps."
 
 #: ../../source/pythonengine.rst:123
 msgid "Selection"
-msgstr ""
+msgstr "Sélection"
 
 #: ../../source/pythonengine.rst:125
 msgid "The instance of Base is a Python iterator"
-msgstr ""
+msgstr "L'instance de Base est un itérateur sur les enregistrements"
 
 #: ../../source/pythonengine.rst:128
 msgid "to iterate on all the records"
-msgstr ""
+msgstr "Pour itérer sur tous les enregistrements"
 
 #: ../../source/pythonengine.rst:136
 msgid "Direct access"
-msgstr ""
+msgstr "Accès direct"
 
 #: ../../source/pythonengine.rst:138
 msgid "A record can be accessed by its identifier"
-msgstr ""
+msgstr "On peut accéder directement à un enregistrement par son identifiant"
 
 #: ../../source/pythonengine.rst:144
 msgid "returns the record such that :python:`record['__id__'] == rec_id`"
-msgstr ""
+msgstr "retourne l'enregistrement tel que :python:`record['__id__'] == rec_id`"
 
 #: ../../source/pythonengine.rst:147
 msgid "Simple selections"
-msgstr ""
+msgstr "Sélection simples"
 
 #: ../../source/pythonengine.rst:149
 msgid ""
 ":python:`db(key1=val1, key2=val2)` returns the list of records where the "
 "keys take the given values"
 msgstr ""
+":python:`db(key1=val1, key2=val2)` renvoie la liste des enregistrements "
+"dont les clés ont les valeurs données "
 
 #: ../../source/pythonengine.rst:150
 msgid ""
 ":python:`db(key) >= val` returns an iterator on all records where the value "
 "of the field key is greater than or equal to val."
 msgstr ""
+":python:`db(key) >= val` retourne un itérateur sur tous les enregistrements "
+"pour lesquels la val du champ cle est supérieure ou égale à val."
 
 #: ../../source/pythonengine.rst:152
 msgid "Example"
-msgstr ""
+msgstr "Exemple"
 
 #: ../../source/pythonengine.rst:159
 msgid ""
 "such \"rich comparison\" operations can be combined with & (AND) and | (OR)"
 msgstr ""
+"ces \"comparaisons riches\" peuvent être combinées avec des & (et) et des | (ou)"
 
 #: ../../source/pythonengine.rst:167
 msgid "List comprehension"
-msgstr ""
+msgstr "Listes en intension"
 
 #: ../../source/pythonengine.rst:169
 msgid "The selection of records can use Python list comprehension syntax"
-msgstr ""
+msgstr "la sélection d'enregistrements peut utiliser la syntaxe des listes en intension (\"list comprehensions\") de Python"
 
 #: ../../source/pythonengine.rst:175
 msgid ""
@@ -250,14 +276,17 @@ msgid ""
 " is below 2 meters. The record is a dictionary, where the key is the field "
 "name and value is the field value"
 msgstr ""
+"retourne les enregistrements de la base pour lesquels l'âge est compris entre "
+"18 et 30 ans, et la taille est inférieure à 2 mètres. L'enregistrement est un "
+"dictionnaire, où la clé est le nom de champ et la valeur est la valeur de ce champ"
 
 #: ../../source/pythonengine.rst:177
 msgid "Python generator expression syntax can also be used"
-msgstr ""
+msgstr "la syntaxe des générateurs d'expression Python peut aussi être utilisée"
 
 #: ../../source/pythonengine.rst:184
 msgid "iterates on the records where the name is one of 'homer' or 'marge'"
-msgstr ""
+msgstr "itère sur les enregistrements dont le nom est 'homer' ou 'marge'"
 
 #: ../../source/pythonengine.rst:187
 msgid "Index"
@@ -268,6 +297,8 @@ msgid ""
 "To speed up selections, an index can be created on a field using "
 ":func:`create_index('field') <pydblite.pydblite._Base.create_index>`"
 msgstr ""
+"Pour accélérer les sélections, un index peut être créé sur un champ "
+":func:`create_index('field') <pydblite.pydblite._Base.create_index>`"
 
 #: ../../source/pythonengine.rst:195
 msgid ""
@@ -277,27 +308,36 @@ msgid ""
 "the values taken by the field, and values are the records whose field values"
 " are egal to the key :"
 msgstr ""
+"Quand un index est créé, l'instance de la base de données a un attribut "
+"(ici _age : noter le signe de soulignement initial, pour éviter les conflits "
+"de noms avec des noms internes). Cet attribut est un objet de type dictionnaire, "
+"où les clés sont les valeurs prises par le champ, et les valeurs sont les "
+"enregistrements dont le champ a la même valeur que la clé :"
 
 #: ../../source/pythonengine.rst:197
 msgid ""
 ":python:`records = db._age[23]` returns the list of records with "
 ":python:`age == 23`"
 msgstr ""
+":python:`records = db._age[23]` retourne la liste des enregistrements avec "
+":python:`age == 23`"
 
 #: ../../source/pythonengine.rst:199
 msgid ""
 "If no record has this value, lookup by this value returns an empty list"
-msgstr ""
+msgstr "Si aucun enregistrement n'a cette valeur, la recherche par cette valeur retourne une liste vide"
 
 #: ../../source/pythonengine.rst:201
 msgid ""
 "The index supports iteration on the field values, and the :python:`keys()` "
 "method returns all existing values for the field"
 msgstr ""
+"L'index supporte l'itération sur les valeurs du champ, et la méthode :python:`keys()` "
+"retourne toutes les valeurs existantes pour le champ"
 
 #: ../../source/pythonengine.rst:204
 msgid "Other attributes and methods"
-msgstr ""
+msgstr "Autres attributs et méthodes"
 
 #: ../../source/pythonengine.rst:206
 msgid ""
@@ -306,24 +346,32 @@ msgid ""
 ":python:`default` is an optional default value ; set to :python:`None` if "
 "not specified"
 msgstr ""
+":func:`add_field('new_field'[,default=v]) "
+"<pydblite.pydblite._Base.add_field>`: ajoute un nouveau champ à la base de données. "
+":python:`default` est une valeur par défaut ; elle vaut :python:`None` si elle n'est pas précisée"
 
 #: ../../source/pythonengine.rst:207
 msgid ""
 ":func:`drop_field('field') <pydblite.pydblite._Base.drop_field>`: drops an "
 "existing field"
 msgstr ""
+":func:`drop_field('field') <pydblite.pydblite._Base.drop_field>`: supprime un champ existant"
 
 #: ../../source/pythonengine.rst:208
 msgid ""
 ":attr:`db.path <pydblite.pydblite._Base.path>`: the path of the database in "
 "the file system"
 msgstr ""
+":attr:`db.path <pydblite.pydblite._Base.path>`: the chemin de la base de données "
+"dans le système de fichiers"
 
 #: ../../source/pythonengine.rst:209
 msgid ""
 ":attr:`db.name <pydblite.pydblite._Base.name>`: the database name : the "
 "basename of the path, stripped of its extension"
 msgstr ""
+":attr:`db.name <pydblite.pydblite._Base.name>`: le nom de la base de données : le "
+"nom de base du chemin (sans le répertoire), auquel on a enlevé l'extension"
 
 #: ../../source/pythonengine.rst:210
 msgid ""
@@ -331,15 +379,10 @@ msgid ""
 "(does not include the internal fields :python:`__id__` and "
 ":python:`__version__`)"
 msgstr ""
+":attr:`db.fields <pydblite.pydblite._Base.fields>`: la liste des champs "
+"(n'inclut pas les champs internes :python:`__id__` et "
+":python:`__version__`)"
 
 #: ../../source/pythonengine.rst:211
 msgid ":python:`len(db)` : number of records in the base"
-msgstr ""
-
-#: ../../source/pythonengine.rst:40
-msgid ""
-":func:`db.exists() <pydblite.pydblite._Base.exists>` indicates if the base "
-"exists."
-msgstr ""
-":func:`db.exists() <pydblite.pydblite._Base.exists>` indique si la base existe "
-"exists."
+msgstr ":python:`len(db)` : nombre d'enregistrements dans la base"
